<resources>
    <string name="app_name">沈阳党建</string>
    <string name="home">首页</string>
    <string name="consultation">资讯</string>
    <string name="activities">活动</string>
    <string name="study">学习</string>
    <string name="my">我的</string>
    <string name="pb_consultation">党建资讯</string>

    <string name="community_activities">社区活动</string>
    <string name="v_volunteer">微志愿</string>
    <string name="v_wish">微心愿</string>

    <string name="news">最新动态</string>
    <string name="more">更多</string>

    <string name="online_answer">在线答题</string>
    <string name="two_one">两学一做</string>
    <string name="nineteen">十九大报告</string>
    <string name="work_guidance">党务工作指导</string>

    <string name="party_center">党中央</string>
    <string name="serverError">无法连接到服务器!</string>

    <!--扫一扫-->
    <string name="qr_name">二维码</string>
    <string name="i_know">我知道了</string>
    <string name="setting">设置</string>
    <string name="permission">抱歉,你的%1$s权限没有打开,无法正常服务
        \n请点击”设置”->在应用程序中找到”popon”->权限管理->%2$s->”允许”即可 </string>
    <string name="low_permission">\n 或者点击”手机管家”->权限管理->%1$s->”允许”即可 </string>
    <string name="camera">摄像头(相机)</string>
    <string name="loading">加载中…</string>


    <!--图片选择-->
    <string name="photograph">拍照</string>
    <string name="album">从手机相册选择</string>
    <string name="cancel">取消</string>
    <string name="image">图片</string>
    <string name="all_image">所有图片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">无法启用系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="done">完成</string>
    <string name="done_with_count">完成(%1$d/%2$d)</string>
    <string name="image_index">%1$d/%2$d</string>
    <string name="delete">删除</string>
    <string name="deleted_a_photo">删除了一张图片</string>
    <string name="confirm_to_delete">确认删除？</string>
    <string name="yes">确定</string>
    <string name="undo">撤消</string>
    <string name="updatecontent">1.沈阳智慧党建 v1.0.2版震撼来袭\n2.界面明朗\n3.强大功能\n4.github:<a href='https://github.com/'>https://github.com/</a></string>
    <string name="rule">一、获取路径分为：活动、学习两个地方。\n\n\n二、活动分为：社区活动、微志愿和微心愿，社区活动和微志愿要参加活动，微志愿需要认领参与即可获得积分。\n\n\n三、学习分为四个小部分：十九大报告、两学一做、党务工作和考试，九大报告、两学一做、党务工作需要阅读认真学习资料记得要认真阅读我们会记录呦，考试是检测大家对学习资料认真程度的检测认真答题考试合格即可获得积分。</string>

    <!--图片选择-->


</resources>
